@@ -16,7 +16,6 @@
 
 package com.hazelcast.internal.util;
 
-import javax.annotation.Nullable;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -31,10 +30,6 @@ import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
-import static java.lang.Character.isLetter;
-import static java.lang.Character.isLowerCase;
-import static java.lang.Character.toLowerCase;
 
 /**
  * Utility class for Strings.
@@ -58,37 +53,7 @@ public final class StringUtil {
     public static final Pattern VERSION_PATTERN
             = Pattern.compile("^(\\d+)\\.(\\d+)(\\.(\\d+))?(-\\w+(?:-\\d+)?)?(-SNAPSHOT)?$");
 
-    /**
-     * Empty String.
-     */
-    public static final String EMPTY_STRING = "";
-
-    private static final String GETTER_PREFIX = "get";
-
     private StringUtil() {
-    }
-
-    /**
-     * Creates a UTF8_CHARSET string from a byte array.
-     *
-     * @param bytes  the byte array.
-     * @param offset the index of the first byte to decode
-     * @param length the number of bytes to decode
-     * @return the string created from the byte array.
-     */
-    public static String bytesToString(byte[] bytes, int offset, int length) {
-        return new String(bytes, offset, length, StandardCharsets.UTF_8);
-    }
-
-    /**
-     * Creates a UTF8_CHARSET string from a byte array.
-     *
-     * @param bytes the byte array.
-     * @return the string created from the byte array.
-     */
-    public static String bytesToString(byte[] bytes) {
-
-        return new String(bytes, StandardCharsets.UTF_8);
     }
 
     /**
@@ -125,7 +90,7 @@ public final class StringUtil {
         if (s == null) {
             return true;
         }
-        return s.trim().isEmpty();
+        return s.isBlank();
     }
 
     /**
@@ -164,27 +129,6 @@ public final class StringUtil {
             return s;
         }
         return s.toUpperCase(LOCALE_INTERNAL);
-    }
-
-    /**
-     * Converts the first character to lower case.
-     *
-     * Empty strings are ignored.
-     *
-     * @param s the given string
-     * @return the converted string.
-     */
-    public static String lowerCaseFirstChar(String s) {
-        if (s.isEmpty()) {
-            return s;
-        }
-
-        char first = s.charAt(0);
-        if (isLowerCase(first)) {
-            return s;
-        }
-
-        return toLowerCase(first) + s.substring(1);
     }
 
     /**
@@ -307,39 +251,6 @@ public final class StringUtil {
         }
     }
 
-    /**
-     * Convert getter into a property name
-     * Example: 'getFoo' is converted into 'foo'
-     *
-     * It's written defensively, when output is not a getter then it
-     * returns the original name.
-     *
-     * It only converts names starting with a get- prefix. When a getter
-     * starts with an is- prefix (=boolean) then it does not convert it.
-     *
-     * @param getterName
-     * @return property matching the given getter
-     */
-    public static String getterIntoProperty(String getterName) {
-        if (getterName == null) {
-            return getterName;
-        }
-        int length = getterName.length();
-        if (!getterName.startsWith(GETTER_PREFIX) || length <= GETTER_PREFIX.length()) {
-            return getterName;
-        }
-
-        String propertyName = getterName.substring(GETTER_PREFIX.length(), length);
-        char firstChar = propertyName.charAt(0);
-        if (isLetter(firstChar)) {
-            if (isLowerCase(firstChar)) {
-                //ok, apparently this is not a JavaBean getter, better leave it untouched
-                return getterName;
-            }
-            propertyName = toLowerCase(firstChar) + propertyName.substring(1, propertyName.length());
-        }
-        return propertyName;
-    }
 
     /**
      * Trim whitespaces. This method (compared to {@link String#trim()}) doesn't limit to space character.
@@ -500,22 +411,6 @@ public final class StringUtil {
     }
 
     /**
-     * Formats given XML String with the given indentation used. If the {@code input} XML string is {@code null}, or
-     * {@code indent} parameter is negative, or XML transformation fails, then the original value is returned unchanged. The
-     * {@link IllegalArgumentException} is thrown when {@code indent==0}.
-     *
-     * @param input the XML String
-     * @param indent indentation (number of spaces used for one indentation level)
-     * @return formatted XML String or the original String if the formatting fails.
-     * @throws IllegalArgumentException when indentation is equal to zero
-     * @deprecated Use directly {@link XmlUtil#format(String, int)}
-     */
-    @Deprecated
-    public static String formatXml(@Nullable String input, int indent) throws IllegalArgumentException {
-        return XmlUtil.format(input, indent);
-    }
-
-    /**
      * Ensures that the returned string is at most {@code maxLength} long. If
      * it's longer, trims it to one char less (not taking word boundaries into
      * account), and appends an ellipsis. Returns {@code null} for null input.
@@ -548,5 +443,9 @@ public final class StringUtil {
             }
         }
         return new String(chars, 0, pos);
+    }
+
+    public static boolean isBoolean(String value) {
+        return value.equalsIgnoreCase("false") || value.equalsIgnoreCase("true");
     }
 }
